--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@
 # OMNeT++/OMNEST Makefile for $(LIB_PREFIX)cubic
 #
 # This file was generated with the command:
-#  opp_makemake --make-so -f --deep -KINET4_4_PROJ=../../inet4.4 -DINET_IMPORT -I$$\(INET4_4_PROJ\)/src -L$$\(INET4_4_PROJ\)/src -lINET$$\(D\)
+#  opp_makemake --make-so -f --deep -KINET4_5_PROJ=../../inet4.5 -KTCPPACED_PROJ=../../tcpPaced -DINET_IMPORT -I$$\(INET4_5_PROJ\)/src -L$$\(INET4_5_PROJ\)/src -L$$\(TCPPACED_PROJ\)/src -lINET$$\(D\) -ltcpPaced$$\(D\)
 #
 
 # Name of target to be created (-o option)
@@ -14,13 +14,13 @@ TARGET_IMPDEF = $(TARGET_NAME)$(IMPDEF_SUFFIX)
 TARGET_FILES = $(TARGET_DIR)/$(TARGET)
 
 # C++ include paths (with -I)
-INCLUDE_PATH = -I$(INET4_4_PROJ)/src
+INCLUDE_PATH = -I$(INET4_5_PROJ)/src
 
 # Additional object and library files to link with
 EXTRA_OBJS =
 
 # Additional libraries (-L, -l options)
-LIBS = $(LDFLAG_LIBPATH)$(INET4_4_PROJ)/src  -lINET$(D)
+LIBS = $(LDFLAG_LIBPATH)$(INET4_5_PROJ)/src $(LDFLAG_LIBPATH)$(TCPPACED_PROJ)/src  -lINET$(D) -ltcpPaced$(D)
 
 # Output directory
 PROJECT_OUTPUT_DIR = ../out
@@ -28,7 +28,7 @@ PROJECTRELATIVE_PATH = src
 O = $(PROJECT_OUTPUT_DIR)/$(CONFIGNAME)/$(PROJECTRELATIVE_PATH)
 
 # Object files for local .cc, .msg and .sm files
-OBJS = $O/transportlayer/tcp/PacedTcp.o $O/transportlayer/tcp/PacedTcpConnection.o $O/transportlayer/tcp/flavours/TcpCubic.o $O/transportlayer/tcp/flavours/TcpCubicState_m.o
+OBJS = $O/transportlayer/tcp/flavours/TcpCubic.o $O/transportlayer/tcp/flavours/TcpCubicState_m.o
 
 # Message files
 MSGFILES = \
@@ -38,7 +38,8 @@ MSGFILES = \
 SMFILES =
 
 # Other makefile variables (-K)
-INET4_4_PROJ=../../inet4.4
+INET4_5_PROJ=../../inet4.5
+TCPPACED_PROJ=../../tcpPaced
 
 #------------------------------------------------------------------------------
 
@@ -59,7 +60,7 @@ include $(CONFIGFILE)
 # Simulation kernel and user interface libraries
 OMNETPP_LIBS = -loppenvir$D $(KERNEL_LIBS) $(SYS_LIBS)
 ifneq ($(PLATFORM),win32)
-LIBS += -Wl,-rpath,$(abspath $(INET4_4_PROJ)/src)
+LIBS += -Wl,-rpath,$(abspath $(INET4_5_PROJ)/src) -Wl,-rpath,$(abspath $(TCPPACED_PROJ)/src)
 endif
 
 COPTS = $(CFLAGS) $(IMPORT_DEFINES) -DINET_IMPORT $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
